--- a/about.html
+++ b/about.html
@@ -1,60 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachusetts">
-  <meta name="keywords" content="hotel,boston hotel,new england hotel">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Hotel BT | About</title>
-</head>
-<body>
-  <header>
-    <nav id="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html">HBT</a></h1>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="current" href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to the most amazing hotel in Dresden"
+    />
+    <meta name="keywords" content="hotel, Dresden, sachsen germany hotel" />
+    <title>Hotel MG |About Dresden</title>
 
-  <section id="about-info" class="bg-light py-3">
-    <div class="container">
-      <div class="info-left">
-        <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit deleniti!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
-      </div>
-      <div class="info-right">
-        <img src="./img/photo-2.jpg" alt="hotel">
-      </div>
-    </div>
-  </section>
-
-  <div class="clr"></div>
-
-  <section id="testimonials" class="py-3">
-    <div class="container">
-      <h2 class="l-heading">What Our Guests Say</h2>
-      <div class="testimonial bg-primary">
-        <img src="./img/person-1.jpg" alt="Samantha">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
-      </div>
-
-      <div class="testimonial bg-primary">
-          <img src="./img/person-2.jpg" alt="Jen">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="./css/mobile.css"
+    />
+  </head>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="container">
+          <div>
+            <a class="main-logo" href="index.html">
+              <img src="img/kartal.png" alt="Company logo" class="logo" />
+            </a>
+          </div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="current" href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
-    </div>
-  </section>
+      </nav>
+    </header>
 
-  <footer id="main-footer">
-    <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
-  </footer>
-</body>
+    <section id="about-info" class="bg-light py-3">
+      <div class="container">
+        <div class="info-left">
+          <h2 class="l-heading">
+            <span class="text-primary">About </span>Hotel MG
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            libero cum maiores pariatur! Quas vitae distinctio sapiente dicta
+            voluptate inventore asperiores architecto modi exercitationem nobis
+            itaque accusantium, culpa nemo. Placeat.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Dignissimos fugit inventore officiis et pariatur expedita. Ea saepe
+            ex at cumque!
+          </p>
+        </div>
+        <div class="info-right">
+          <img src="./img/photo-2.jpg" alt="Hotel Front Side" />
+        </div>
+      </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <section id="testimonials" class="py-3">
+      <div class="container">
+        <h2 class="l-heading">What Our Guests Say</h2>
+        <div class="testimonial bg-primary">
+          <img src="./img/person-1.jpg" alt="Guest Picture1" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+            ut tenetur, quibusdam saepe ipsa possimus velit vitae labore
+            accusantium esse. Quo nostrum eum, natus esse pariatur quibusdam,
+            veniam doloribus cupiditate incidunt, iusto libero ex hic non magnam
+            sunt illo dolores.
+          </p>
+        </div>
+
+        <div class="testimonial bg-primary">
+          <img src="./img/person-2.jpg" alt="Guest Picture2" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+            ut tenetur, quibusdam saepe ipsa possimus velit vitae labore
+            accusantium esse. Quo nostrum eum, natus esse pariatur quibusdam,
+            veniam doloribus cupiditate incidunt, iusto libero ex hic non magnam
+            sunt illo dolores.
+          </p>
+          <div class="clr"></div>
+        </div>
+        <div class="clr"></div>
+      </div>
+      <div class="clr"></div>
+    </section>
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+      <div class="clr"></div>
+
+      <p>Hotel MG &copy; 2022, All Rights Reserved</p>
+    </footer>
+    <div class="clr"></div>
+  </body>
 </html>
